--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
                     <h3><%= date.title %></h3>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-primary">Responder</button>
+                    <a href="/question/<%= date.id %>" class="btn btn-primary">Responder</a>
                 </div>
             </div>
         <%})%>
